syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.model;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/model/types";

message ModelVersion {
  int32 vid = 1; 
  int32 pid = 2; 
  uint32 softwareVersion = 3; 
  string softwareVersionString = 4; 
  int32 cdVersionNumber = 5; 
  string firmwareInformation = 6; 
  bool softwareVersionValid = 7; 
  string otaUrl = 8; 
  uint64 otaFileSize = 9; 
  string otaChecksum = 10; 
  int32 otaChecksumType = 11; 
  uint32 minApplicableSoftwareVersion = 12; 
  uint32 maxApplicableSoftwareVersion = 13; 
  string releaseNotesUrl = 14; 
  string creator = 15 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint32 schemaVersion = 16;
  uint32 specificationVersion = 17;
}

